tests/errors/variant_flow/flow_uninit_borrow_clobbers_refinement.sim

            enum Option: Copy + Drop { None: unit Some: i64 }
            fn f() {
              o: Option;
              r: &uninit Option;
              entry:
                o = Option::None(unit);
                r = &uninit o;
                switchEnum(o) [None: n, Some: dead]
              n: return
              dead: unreachable
            }
            